add newsletter style + content + button display other expositions

--- a/src/dada-app/dada-app.html
+++ b/src/dada-app/dada-app.html
@@ -4,6 +4,7 @@
 <link rel="import" href="elements/dada-action.html">
 <link rel="import" href="elements/dada-slide.html">
 <link rel="import" href="elements/dada-news.html">
+<link rel="import" href="elements/dada-newsletter.html">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
 <dom-module id="dada-app">
@@ -19,6 +20,7 @@
     <dada-slide></dada-slide>
     <dada-action></dada-action>
     <dada-news></dada-news>
+    <dada-newsletter></dada-newsletter>
     <dada-footer></dada-footer>
   </template>
   
