--- a/src/dada-app/elements/dada-newsletter.html
+++ b/src/dada-app/elements/dada-newsletter.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../../bower_components/paper-input/paper-input.html">
 
 <dom-module id="dada-newsletter">
   <template>
@@ -31,14 +32,27 @@
         border-top: 1px solid black;
       }
 
-      paper-button.custom {
+      paper-button.custom-button {
         width: 40em;
         background-color: black;
         color: white;
       }
 
+      .custom-input {
+        width: 40em;
+        color:grey;
+        font-family: Helvetica, Arial, sans-serif;
+        font-weight:500;
+        font-size: 18px;
+        border-radius: 0;
+        line-height: 22px;
+        background-color: #FFEFEF;
+        border: 0.5px solid grey;
+      }
+
       .button-container{
-        text-align: center;
+        align-self: center;
+        margin-bottom: 2em;
       }
 
       .empty-container{
@@ -50,9 +64,11 @@
     <div class="container">
       <div class="empty-container"></div>
       <h1>Restez Informés</h1>
-
       <div class="button-container">
-        <paper-button raised noink class="custom" on-click="handleClick">M'inscrire à la newsletter</paper-button>
+          <input type="text" label="Mon mail" class="custom-input"></input>
+      </div>
+      <div class="button-container">
+        <paper-button raised noink class="custom-button" on-click="handleClick">M'inscrire à la newsletter</paper-button>
       </div>
 
     </div>
