add redirection to paiment page

--- a/src/dada-app/elements/dada-news.html
+++ b/src/dada-app/elements/dada-news.html
@@ -36,10 +36,6 @@
                 /*box-shadow: 1px 1.5px 2px grey;*/
             }
 
-            .title-box {
-                background-color: rgba(0, 0, 255, 0.5);
-            }
-
             .img-responsive {
                 display: block;
                 width: 100%;
@@ -158,7 +154,7 @@
             <div class="flex-item">
                 <div class=img-responsive>
                     <img src="src/img/MAGRITTE.jpg" class="img-responsive"></img>
-                    <a href src="../../../exposition.html">
+                    <a href="exposition.html">
                         <div class="article-container">
                             <div class="encart"><span class="title-news">Peinture</span></div>
                             <span class="title-news">Magritte, La trahison</span>
