--- a/src/dada-buy/dada-buy.html
+++ b/src/dada-buy/dada-buy.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../dada-app/elements/dada-header.html">
+<link rel="import" href="../dada-app/elements/dada-footer.html">
 <link rel="import" href="elements/dada-exposition.html">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -11,11 +13,9 @@
         width: 100%;
       }
     </style>
+    
     <dada-header></dada-header>
-    <dada-slide></dada-slide>
-    <dada-action></dada-action>
-    <dada-news></dada-news>
-    <dada-newsletter></dada-newsletter>
+    <dada-exposition></dada-exposition>
     <dada-footer></dada-footer>
   </template>
   
