--- a/exposition.html
+++ b/exposition.html
@@ -10,10 +10,11 @@
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
 
+    <link rel="import" href="/src/dada-buy/dada-buy.html">
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
   </head>
   <body style="margin:0; width:100%">
-    <p>plop</p>
+    <dada-buy></dada-buy>
   </body>
 </html>
