--- a/src/dada-app/elements/dada-action.html
+++ b/src/dada-app/elements/dada-action.html
@@ -22,6 +22,12 @@
                 box-shadow: 0px 0px 10px #949494;
             }
 
+            .papertab-style:focus {
+                -moz-box-shadow: 0px 0px 10px #949494;
+                -webkit-box-shadow: 0px 0px 10px #949494;
+                box-shadow: 0px 0px 10px #949494;
+            }
+
             .papertab-style{
                 /*margin: 0 5px; decommente si tu veux voir l'ombre sur les bords exterieurs des paper tab exterieur*/
             }
