exposition page progression

--- a/src/dada-buy/dada-buy.html
+++ b/src/dada-buy/dada-buy.html
@@ -16,7 +16,7 @@
     
     <dada-header></dada-header>
     <dada-exposition></dada-exposition>
-    <dada-footer></dada-footer>
+    <!--<dada-footer></dada-footer>-->
   </template>
   
   <script>
