add video on exposition page

--- a/src/dada-app/elements/dada-news.html
+++ b/src/dada-app/elements/dada-news.html
@@ -31,7 +31,7 @@
                 margin-top: 10px;
 
                 color: black;
-                font-weight: bold;
+               /* font-weight: bold;*/
                 text-align: center;
                 /*box-shadow: 1px 1.5px 2px grey;*/
             }
@@ -110,6 +110,7 @@
             .title-news {
                 font-size: 25px;
                 text-align: justify;
+                font-weight: bold;
             }
 
             .encart span {
