--- a/src/dada-buy/elements/dada-exposition.html
+++ b/src/dada-buy/elements/dada-exposition.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../../dada-app/elements/dada-news.html">
 
 <dom-module id="dada-exposition">
     <template>
@@ -99,6 +100,7 @@
             .title{
                 font-size: 25px;
                 font-weight: bold;
+                text-align: left;
             }
 
             .title-style:before {
@@ -114,6 +116,38 @@
             video {
                 margin-top: 2em;
                 margin-bottom: 5em;
+            }
+
+            .video-style{
+                margin-top: 3em;
+                margin-bottom: 4em;
+            }
+
+            .payment-container{
+                display: flex;
+                margin: 0 20% 0 20%;
+            }
+
+            .payment-style{
+                border:1px solid #B8B6B6;
+                width: 100%;
+                height: 20em;
+            }
+
+            .left-content{
+                float:left;
+                margin: 1em;
+                width: 40%;
+            }
+
+            .right-content{
+                float:right;
+                margin: 1em;
+                width: 60%;
+            }
+
+            .date-style{
+                font-size: 12px;
             }
 
         </style>
@@ -140,6 +174,36 @@
                                 <source src="src/img/POC-DADA.mp4" type="video/mp4">
                                 Your browser does not support HTML5 video.
                             </video>
+
+                            <div class="video-style">
+                                <span class="title">Prenez vos places !</span>
+                            </div>
+
+
+                            <div class="payment-container">
+                                <div class="payment-style">
+                                    <div class="left-content">
+                                        plop
+                                    </div>
+                                    <div class="right-content">
+                                        <span class="title">Visite digitale immersive</span>
+                                        <span class="title">Magritte, la trahison des images</span>
+                                        <br/>
+                                        <span class="date-style margin-title"><img src="src/img/Fichier6.png" class="calendar-style" />21 Sept 2017 - 23 Jan 2018</span>
+                                        <span class="date-style margin-title"><img src="src/img/Fichier1.png" class="calendar-style" />Durée moyenne : 1h30</span>
+                                        <br />
+                                        <p>
+                                            Pour cette exposition,plus d'une centaine d'oeuvres du peintre surréaliste sont réunies dnas la salle du centre Pompidou, l'occasion d'une rétrospective tournée vers la trahison des images. Retrouvez les avec un contenu immersif et éductif dans cette e-visite.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--<div class="video-style">
+                                <span class="title">En ce moment sur DADA</span>
+                                <dada-news></dada-news>
+                            </div>-->
+
                         </div>
                         
                 </div>
