liens vers la page d'accueil sur l'image de titre

--- a/src/dada-app/elements/dada-header.html
+++ b/src/dada-app/elements/dada-header.html
@@ -42,7 +42,7 @@
       }
 
     </style>
-    <div class="title-style"><img class="title-img" src="src/img/logo.png"></div>
+    <div class="title-style"><a href="/"><img class="title-img" src="src/img/logo.png"></a></div>
     <div class="container">
       <div class="itemMenu gradient"><b>Billeterie</b></div>
       <div class="itemMenu gradient"><b>S'abonner</b></div>
